# GDExtensionTemplate

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GDExtensionTemplate.gdextension.in  README.md
.github/conda/: environment.yml
.github/workflows/: build.yml  format-check.yml  main.yml
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  GitVersionInfo.cmake  ccache.cmake
src/: CMakeLists.txt  Example.cpp  Example.h  GDExtensionTemplate.cpp  GDExtensionTemplate.h  RegisterExtension.cpp  Version.h.in  example.cpp  example.h  register_types.cpp  register_types.h
templates/: CMakeLists.txt  template.debug.gdextension.in  template.gdextension.in  template.release.gdextension.in
